@@ -42,3 +42,7 @@ N: Dave Daeschler
 C: USA
 E: ddaeschl@rsaisp.com
 
+N: cjgohlke
+E: cjgohlke@gmail.com
+D: Windows 64 bit support
+I: 107
